--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset=utf-8 />
 </head>
 
-<body bgcolor="#CCFF33" >
+<body bgcolor="yellow" >
 	<div>
 		<script>
 			var CH = 0;
@@ -59,7 +59,7 @@
 		</script>
 	</div>
 </p>
-<font size="10" color="yellow">KEY TEST</font></p>
+<font size="10">KEY TEST</font></p>
 	
 </body>
 </html>
